--- a/LocalRAGChat.Client/package.json
+++ b/LocalRAGChat.Client/package.json
@@ -10,5 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.3"}
+    "@tailwindcss/cli": "^4.1.11",
+    "tailwindcss": "^4.1.11"
+  }
 }
